tests/should_fail/comparison_type_mismatch.nv
module comparison_type_mismatch
// SHOULD FAIL: passing Bool where Int expected
fn double(x: Int) -> Int {
    return x * 2
}
let result = double(true)
